versions/3.5.0/docs/SubtaskPartialUpdate.md
# SubtaskPartialUpdate


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**kwargs** | **{str: (str,)}** |  | [optional] 
**graph_layout** | **{str: (str, none_type)}** |  | [optional] 
**trigger** | **str, none_type** |  | [optional] 
**name** | **str, none_type** |  | [optional] 
**noop_dont_save** | **bool** |  | [optional] 
**no_concurrency** | **bool** |  | [optional] 
**timeout** | **int, none_type** |  | [optional] 
**log_variable** | **bool** |  | [optional] 
**task** | **str, none_type** |  | [optional] 
**condition_variable** | **str, none_type** |  | [optional] 
**condition_value** | **str, none_type** |  | [optional] 
**sync** | **bool** |  | [optional] 
**queue** | **str, none_type** |  | [optional] 
**enqueue_at_front** | **bool** |  | [optional] 
**parent** | **int** |  | [optional] 
**relative_to** | **int, none_type** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


